# Pico-Log-Library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  install_pico.sh  post_create.sh
.devcontainer/vscode_config/: launch.json  tasks.json
.github/workflows/: analyze-pico.yml  pico-build.yml  pico-codeql.yml.disabled
examples/: CMakeLists.txt
examples/baremetal/: CMakeLists.txt  main.cpp
examples/baremetal/c/: CMakeLists.txt  main.c
examples/baremetal/cpp/: CMakeLists.txt  main.cpp
examples/freertos/: CMakeLists.txt  main.cpp
examples/freertos/c/: CMakeLists.txt  main.c
examples/freertos/cpp/: CMakeLists.txt  main.cpp
include/pico_log_lib/: logger.h  logger_c.h
include/pico_log_lib/internal/: common.h
libfreertos/: README.md
libfreertos/Config/: FreeRTOSConfig.h
src/: CMakeLists.txt  c_api.cpp  logger.c++  logger.cpp
